--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>코드 라이언</h1>
     <ul>
-      <li><a href="/about">About</a></li>
+      <li><a href="/testrepo/about">About</a></li>
       <li>
-        <a href="/kdt"
+        <a href="/testrepo/kdt"
           >KDT
           <ul>
             <li><a href="">1</a></li>
@@ -20,7 +20,7 @@
           </ul>
         </a>
       </li>
-      <li><a href="/edu">기업교육</a></li>
+      <li><a href="/testrepo/edu">기업교육</a></li>
     </ul>
   </body>
 </html>
